Revert "jdk 17"
This reverts commit b7b216873ef1f0007d3adb34bdeab7c03f1d2de3.